--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -2573,19 +2573,19 @@
                 <table>
                   <tr>
                     <td>Container</td>
-                    <td>Standard 40-foot cold chain container with high-density polyurethane insulation</td>
+                    <td>1 x Standard 40-foot cold chain container with high-density polyurethane insulation</td>
                   </tr>
                   <tr>
                     <td>Internal Structure</td>
-                    <td>T-shaped aluminum bottom plate for stability and water recovery</td>
+                    <td>4 x T-shaped aluminum bottom plates for stability and water recovery</td>
                   </tr>
                   <tr>
                     <td>Flooring</td>
-                    <td>Galvanized aluminum plate with laboratory anti-slip floor mat</td>
+                    <td>40 sq.m galvanized aluminum plate with laboratory anti-slip floor mat</td>
                   </tr>
                   <tr>
                     <td>Partitions</td>
-                    <td>Double-layer purification board</td>
+                    <td>8 x Double-layer purification boards</td>
                   </tr>
                 </table>
               </div>
@@ -2599,7 +2599,7 @@
                   </tr>
                   <tr>
                     <td>Frame</td>
-                    <td>Plastic-sprayed steel frame</td>
+                    <td>12 x Plastic-sprayed steel frames</td>
                   </tr>
                   <tr>
                     <td>Dimensions</td>
@@ -2607,7 +2607,7 @@
                   </tr>
                   <tr>
                     <td>Planting Capacity</td>
-                    <td>5,880 plants total (98 plants per tray)</td>
+                    <td>5,880 plants total (60 trays with 98 plants per tray)</td>
                   </tr>
                   <tr>
                     <td>Cultivation Method</td>
@@ -2615,11 +2615,11 @@
                   </tr>
                   <tr>
                     <td>Tray Material</td>
-                    <td>Opaque ABS, corrosion-resistant with 3+ year lifespan</td>
+                    <td>60 x Opaque ABS trays, corrosion-resistant with 3+ year lifespan</td>
                   </tr>
                   <tr>
                     <td>Lighting</td>
-                    <td>Full spectrum LED plant lights (1.5m/piece)</td>
+                    <td>45 x Full spectrum LED plant lights (1.5m/piece)</td>
                   </tr>
                 </table>
               </div>
@@ -2629,19 +2629,19 @@
                 <table>
                   <tr>
                     <td>Fertilization</td>
-                    <td>Camol 3-channel peristaltic pump with adjustable speed</td>
+                    <td>2 x Camol 3-channel peristaltic pumps with adjustable speed</td>
                   </tr>
                   <tr>
                     <td>Storage</td>
-                    <td>Three 10L blue fertilizer buckets</td>
+                    <td>6 x 10L blue fertilizer buckets</td>
                   </tr>
                   <tr>
                     <td>Water Management</td>
-                    <td>Dedicated water filter and circulation system</td>
+                    <td>1 x Dedicated water filter and circulation system with redundant pumps</td>
                   </tr>
                   <tr>
                     <td>Solution Tanks</td>
-                    <td>Two PP material tanks with inlet/outlet, sewage pipe & oxygen filling</td>
+                    <td>2 x 200L PP material tanks with inlet/outlet, sewage pipe & oxygen filling</td>
                   </tr>
                 </table>
               </div>
@@ -2651,23 +2651,23 @@
                 <table>
                   <tr>
                     <td>Temperature Sensor</td>
-                    <td>Range: -40°C to 80°C, Accuracy: ±0.5°C at 25°C</td>
+                    <td>1 x Sensor, Range: -40°C to 80°C, Accuracy: ±0.5°C (0-60°C)</td>
                   </tr>
                   <tr>
                     <td>Humidity Sensor</td>
-                    <td>Range: 0-100%RH, Accuracy: ±3%RH (5-95%RH, 25°C)</td>
+                    <td>1 x Sensor, Range: 0-100%RH, Accuracy: ±3%RH (20-80%RH)</td>
                   </tr>
                   <tr>
                     <td>CO₂ Sensor</td>
-                    <td>Accuracy: ±1.5%FS with RS485 output</td>
+                    <td>1 x Sensor, Range: 0-5000 ppm, Resolution: 1 ppm, Accuracy: ±50 ppm</td>
                   </tr>
                   <tr>
                     <td>pH Sensor</td>
-                    <td>Range: 0-14pH, Resolution: 0.01pH, IP68 rated</td>
+                    <td>2 x Sensors, Range: 0-14pH, Resolution: 0.01pH, IP68 rated</td>
                   </tr>
                   <tr>
                     <td>Conductivity Sensor</td>
-                    <td>Range: 0-20000μs/cm, Accuracy: ≤±3%</td>
+                    <td>2 x Sensors, Range: 0-20000μs/cm, Accuracy: ≤±3%</td>
                   </tr>
                 </table>
               </div>
@@ -2677,19 +2677,19 @@
                 <table>
                   <tr>
                     <td>Climate Control</td>
-                    <td>Central air conditioning with cooling/heating units</td>
+                    <td>1 x Central air conditioning unit (5HP) with cooling/heating functions</td>
                   </tr>
                   <tr>
                     <td>Air Management</td>
-                    <td>Fresh air system with circulation fans</td>
+                    <td>6 x Circulation fans and 1 x fresh air exchange system</td>
                   </tr>
                   <tr>
                     <td>Dehumidification</td>
-                    <td>Dedicated dehumidifier unit</td>
+                    <td>1 x 30L/day dedicated dehumidifier unit</td>
                   </tr>
                   <tr>
                     <td>CO₂ System</td>
-                    <td>15L carbon dioxide cylinder with electromagnetic pressure valve</td>
+                    <td>1 x 15L carbon dioxide cylinder with electromagnetic pressure valve</td>
                   </tr>
                 </table>
               </div>
@@ -2699,11 +2699,11 @@
                 <table>
                   <tr>
                     <td>Interface</td>
-                    <td>10-inch Siemens LED screen with PLC host</td>
+                    <td>1 x 10-inch Siemens LED touchscreen with PLC host</td>
                   </tr>
                   <tr>
                     <td>Management Platform</td>
-                    <td>Intelligent control software for sensor data and equipment management</td>
+                    <td>1 x Intelligent control software license for sensor data and equipment management</td>
                   </tr>
                 </table>
               </div>
@@ -2742,19 +2742,19 @@
                 <table>
                   <tr>
                     <td>Container</td>
-                    <td>Standard 40-foot special insulated container for cold chain with high-density polyurethane insulation</td>
+                    <td>1 x Standard 40-foot special insulated container for cold chain with high-density polyurethane insulation</td>
                   </tr>
                   <tr>
                     <td>Internal Structure</td>
-                    <td>Dry and wet separation partition with windproof curtain</td>
+                    <td>1 x Dry and wet separation partition with windproof curtain</td>
                   </tr>
                   <tr>
                     <td>Foundation</td>
-                    <td>T-shaped aluminum bottom plate for stability and water recovery</td>
+                    <td>1 x T-shaped aluminum bottom plate for stability and water recovery</td>
                   </tr>
                   <tr>
                     <td>Flooring</td>
-                    <td>Laboratory anti-slip floor mat for safety</td>
+                    <td>1 x Laboratory anti-slip floor mat for safety</td>
                   </tr>
                 </table>
               </div>
@@ -2768,7 +2768,7 @@
                   </tr>
                   <tr>
                     <td>Frame</td>
-                    <td>Plastic-sprayed square tube construction</td>
+                    <td>2 Groups of plastic-sprayed square tube construction</td>
                   </tr>
                   <tr>
                     <td>Growing Method</td>
@@ -2776,15 +2776,19 @@
                   </tr>
                   <tr>
                     <td>Lighting</td>
-                    <td>Special LED light strips optimized for fungal growth</td>
+                    <td>8 x Special LED light strips optimized for fungal growth plus 4 x LED lighting sets</td>
                   </tr>
                   <tr>
                     <td>Water System</td>
-                    <td>Dedicated water purification equipment</td>
+                    <td>1 x Dedicated water purification equipment</td>
                   </tr>
                   <tr>
                     <td>Humidification</td>
-                    <td>Ultrasonic humidification system for precise moisture control</td>
+                    <td>1 x Ultrasonic humidification system for precise moisture control</td>
+                  </tr>
+                  <tr>
+                    <td>Auxiliary Materials</td>
+                    <td>1 x Set of lines, pipes and installation accessories</td>
                   </tr>
                 </table>
               </div>
@@ -2793,20 +2797,20 @@
                 <h5>Monitoring System</h5>
                 <table>
                   <tr>
-                    <td>Temperature Sensor</td>
-                    <td>Range: -40°C to 80°C, Accuracy: ±0.5°C at 25°C</td>
-                  </tr>
-                  <tr>
-                    <td>Humidity Sensor</td>
-                    <td>Range: 0-100%RH, Accuracy: ±3%RH (5-95%RH, 25°C)</td>
+                    <td>Temperature & Humidity Sensor</td>
+                    <td>1 x TECLION TKLN-WS-G/5 Sensor, Range: -40°C to 80°C (temp), 0-100%RH (humidity), Accuracy: ±0.5°C at 25°C (temp), ±3%RH (5-95%RH, 25°C) (humidity)</td>
                   </tr>
                   <tr>
                     <td>CO₂ Sensor</td>
-                    <td>Range: 0-5000 ppm, Resolution: 1 ppm, Accuracy: ±50 ppm</td>
+                    <td>1 x Sensor, Range: 0-5000 ppm, Resolution: 1 ppm, Accuracy: ±50 ppm</td>
                   </tr>
                   <tr>
                     <td>Sensor Stability</td>
                     <td>Temperature: ≤0.1°C/year, Humidity: ≤0.1%RH/year</td>
+                  </tr>
+                  <tr>
+                    <td>Power & Communication</td>
+                    <td>10-30V DC power supply with RS485 (Modbus protocol) output signal</td>
                   </tr>
                 </table>
               </div>
@@ -2816,7 +2820,7 @@
                 <table>
                   <tr>
                     <td>Interface</td>
-                    <td>7-inch Siemens LED screen with PLC host</td>
+                    <td>1 x 7-inch Siemens LED screen with PLC host</td>
                   </tr>
                   <tr>
                     <td>Management Platform</td>
@@ -2834,19 +2838,19 @@
                 <table>
                   <tr>
                     <td>Climate Control</td>
-                    <td>Special constant temperature unit for edible fungi</td>
+                    <td>Special constant temperature unit for edible fungi (with 485 communication module)</td>
                   </tr>
                   <tr>
                     <td>Air Management</td>
-                    <td>Fresh air system with circulation fans</td>
+                    <td>1 x Fresh air system with air inlet/return ducts and check valve</td>
                   </tr>
                   <tr>
                     <td>Air Circulation</td>
-                    <td>Dedicated circulation fans to promote uniform temperature and humidity</td>
+                    <td>2 x Circulation fans to promote uniform temperature and humidity</td>
                   </tr>
                   <tr>
                     <td>Communication</td>
-                    <td>485 communication module for smart platform unified control</td>
+                    <td>Smart platform unified intelligent control system</td>
                   </tr>
                 </table>
               </div>
@@ -2885,15 +2889,15 @@
                 <table>
                   <tr>
                     <td>Container</td>
-                    <td>Standard 40-foot cold chain container with high-density polyurethane insulation</td>
+                    <td>1 x Standard 40-foot cold chain container with high-density polyurethane insulation</td>
                   </tr>
                   <tr>
                     <td>Internal Structure</td>
-                    <td>Laboratory special anti-slip floor mats with windproof door curtain</td>
+                    <td>1 x Laboratory special anti-slip floor mats with windproof door curtain</td>
                   </tr>
                   <tr>
                     <td>Interior</td>
-                    <td>Custom interior decoration optimized for microgreen production</td>
+                    <td>1 x Custom interior decoration optimized for microgreen production</td>
                   </tr>
                 </table>
               </div>
@@ -2907,7 +2911,7 @@
                   </tr>
                   <tr>
                     <td>Frame</td>
-                    <td>Stainless steel construction for durability and cleanliness</td>
+                    <td>2 Groups of stainless steel frames for durability and cleanliness</td>
                   </tr>
                   <tr>
                     <td>Growing Method</td>
@@ -2915,15 +2919,23 @@
                   </tr>
                   <tr>
                     <td>Growing Trays</td>
-                    <td>360 special growth trays for pasture/microgreens (750mm x 500mm)</td>
+                    <td>360 x Special growth trays for pasture/microgreens (750mm x 500mm)</td>
                   </tr>
                   <tr>
                     <td>Lighting</td>
-                    <td>Special LED fill light strips optimized for microgreen development</td>
+                    <td>18 x Special LED fill light strips optimized for microgreen development</td>
                   </tr>
                   <tr>
                     <td>Irrigation</td>
-                    <td>High pressure atomization system for fine mist delivery</td>
+                    <td>1 x High pressure atomization system for fine mist delivery</td>
+                  </tr>
+                  <tr>
+                    <td>Flashlights</td>
+                    <td>3 x Sets for maintenance and inspection</td>
+                  </tr>
+                  <tr>
+                    <td>Auxiliary Materials</td>
+                    <td>1 x Set of lines, pipes and installation accessories</td>
                   </tr>
                 </table>
               </div>
@@ -2959,11 +2971,11 @@
                 <table>
                   <tr>
                     <td>Interface</td>
-                    <td>7-inch Siemens LED screen with PLC host</td>
+                    <td>1 x 7-inch Siemens LED screen with PLC host</td>
                   </tr>
                   <tr>
                     <td>Management Platform</td>
-                    <td>Intelligent control software for sensor data and equipment management</td>
+                    <td>1 x Intelligent control software for sensor data and equipment management</td>
                   </tr>
                   <tr>
                     <td>Automation</td>
@@ -2977,19 +2989,19 @@
                 <table>
                   <tr>
                     <td>Climate Control</td>
-                    <td>Central air conditioning with heating and cooling capabilities</td>
+                    <td>1 x Central air conditioning unit with heating and cooling capabilities</td>
                   </tr>
                   <tr>
                     <td>Air Management</td>
-                    <td>Fresh air system with circulation fans</td>
+                    <td>1 x Fresh air system with air inlet/return ducts and check valve</td>
                   </tr>
                   <tr>
                     <td>Air Circulation</td>
-                    <td>Dedicated circulation fans to promote uniform temperature and humidity</td>
+                    <td>2 x Circulation fans to promote uniform temperature and humidity</td>
                   </tr>
                   <tr>
                     <td>Sterilization</td>
-                    <td>Model: TKLN-007 10g/h sterilization system</td>
+                    <td>1 x Model TKLN-007 10g/h sterilization system</td>
                   </tr>
                   <tr>
                     <td>Communication</td>
