--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -1996,6 +1996,30 @@
       line-height: 1.4;
     }
   </style>
+
+  <!-- Google Analytics Tracking Code -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-MEASUREMENT_ID');
+    
+    // Additional configuration for session duration measurement
+    gtag('config', 'G-MEASUREMENT_ID', {
+      'session_duration': 'engaged'
+    });
+  </script>
+  
+  <!-- Microsoft Clarity Tracking Code -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qqt8sdj41q");
+  </script>
 </head>
 <body>
   <canvas id="bgCanvas"></canvas>
