--- a/index.html
+++ b/index.html
@@ -392,6 +392,37 @@
       margin-top: 10px;
     }
   </style>
+  <script src="js/gallery.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("YOUR_PUBLIC_KEY"); // Add your EmailJS public key here
+    })();
+  </script>
+  
+  <!-- Google Analytics Tracking Code -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'G-MEASUREMENT_ID');
+    
+    // Additional configuration for session duration measurement
+    gtag('config', 'G-MEASUREMENT_ID', {
+      'session_duration': 'engaged'
+    });
+  </script>
+  
+  <!-- Microsoft Clarity Tracking Code -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qqt8sdj41q");
+  </script>
 </head>
 <body>
   <canvas id="bgCanvas"></canvas>
@@ -1062,13 +1093,6 @@ Total Net Weight: 2.8 tons
   <script src="js/bg-animation.js"></script>
   <!-- Shared JS -->
   <script src="js/script.js"></script>
-  <script src="js/gallery.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script>
-    (function() {
-      emailjs.init("YOUR_PUBLIC_KEY"); // Add your EmailJS public key here
-    })();
-  </script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       // Pre-populate enquiry form based on query parameters (if any)
