--- a/aquaponic-farming.html
+++ b/aquaponic-farming.html
@@ -1998,16 +1998,16 @@
   </style>
 
   <!-- Google Analytics Tracking Code -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEASUREMENT_ID"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J1G65E2FNZ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     
-    gtag('config', 'G-MEASUREMENT_ID');
+    gtag('config', 'G-J1G65E2FNZ');
     
     // Additional configuration for session duration measurement
-    gtag('config', 'G-MEASUREMENT_ID', {
+    gtag('config', 'G-J1G65E2FNZ', {
       'session_duration': 'engaged'
     });
   </script>
